Bug 900393 - Implement missing method in DeprecatedSharedRGBImage. r=eflores a=bajaj